# sm64

./: .clang-format  .gitignore  CHANGES  Dockerfile  Doxyfile  Jenkinsfile  LICENSE.md  LINUX.md  Makefile  Makefile.rej  Makefile.split  Makefile.split.rej  README.md  WIN10.md  assets.json  build_docker.bat  charmap.txt  charmap_menu.txt  diff-settings.sh  diff.py  diff.sh  diff_settings.py  extract_assets.py  first-diff.py  forking.txt  funny  rename_sym.sh  shell.nix  sm64.cn.sha1  sm64.ld  undefined_syms.txt
actors/: common0.c  (+76 more)
tools/ido-static-recomp/tools/rabbitizer/: .clang-format  .clang-tidy  .gitignore  .gitrepo  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  r5900test.c  registersTrackerTest.c  rsptest.c  setup.cfg  setup.py  test.c
tools/ido-static-recomp/tools/rabbitizer/.github/workflows/: ci.yml  make.yml
tools/ido-static-recomp/tools/rabbitizer/cplusplus/include/: rabbitizer.hpp
tools/ido-static-recomp/tools/rabbitizer/include/: rabbitizer.h
tools/ido-static-recomp/tools/rabbitizer/include/analysis/: RabbitizerLoPairingInfo.h  RabbitizerRegistersTracker.h  (+1 more)
tools/ido-static-recomp/tools/rabbitizer/rabbitizer/: Config.pyi  Enum.pyi  InstrCategory.pyi  InstrId.pyi  LoPairingInfo.pyi  RegGprN32.pyi  RegGprO32.pyi  RegistersTracker.pyi  TrackedRegisterState.pyi  Utils.pyi  __init__.pyi  rabbitizer.pyi  rabbitizer_global_config.c  rabbitizer_module.c  rabbitizer_module.h  rabbitizer_submodule_Utils.c  rabbitizer_type_Instruction.c  rabbitizer_type_LoPairingInfo.c  rabbitizer_type_RegistersTracker.c  rabbitizer_type_TrackedRegisterState.c
(+4538 files in other folders)
