# SPDX-FileCopyrightText: © 2022 Decompollaborate
# SPDX-License-Identifier: MIT

[metadata]
name = rabbitizer
# Version should be synced with include/common/RabbitizerVersion.h
version = 1.2.3
author = Decompollaborate
license = MIT
description = MIPS instruction decoder
url = https://github.com/Decompollaborate/rabbitizer
project_urls =
    Source = https://github.com/Decompollaborate/rabbitizer
    Bug Tracker = https://github.com/Decompollaborate/rabbitizer/issues
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = rabbitizer

[options.package_data]
rabbitizer =
    **/*.pyi
    **/py.typed
